2004-02-28  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am: Honour gconf2 configure arguments (patch by
	Julio M. Merino Vidal <jmmv@menta.net>) (Closes: #135415)

2004-02-28  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (totem_playlist_add_files),
	(totem_playlist_save_files): update the TotemPlaylist to use the
	GtkFileChooser (Closes: #133210)

2004-02-26  Julien MOUTTE <julien@moutte.net>

	* README: updated GStreamer backend todo list.

2004-02-24  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-cd-selection.c: (bacon_cd_selection_new): update from
	libbacon

2004-02-20  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* src/Makefile.am:
	* src/gnome-caption-table.c:
	* src/gnome-caption-table.h:
	* src/gnome-password-dialog.c:
	* src/gnome-password-dialog.h: more unused files removed
	* src/totem.c: (totem_action_open_files),
	(totem_action_open_files_list), (on_open1_activate),
	(on_open_location1_activate):
	* src/totem.h: updated Totem itself to use the GtkFileChooser

2004-02-19  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* data/Makefile.am:
	* data/totem-download.glade:
	* src/Makefile.am:
	* src/totem-download.c:
	* src/totem-download.h:
	* src/totem.c: (totem_action_set_mrl): remove the automatic download
	of Windows DLLs as there weren't any useful downloadable DLLs, and that
	we don't want Microsoft to sue us.
	Removes the dependency on CURL

2004-02-19  Bastien Nocera  <hadess@hadess.net>

	* NEWS: updated
	* data/Makefile.am:
	* data/totem-random.pl: removed the useless random script, the
	functionality is builtin now

2004-02-19  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/Makefile.am:
	* src/gnome-authn-manager.c:
	* src/gnome-authn-manager.h:
	* src/totem.c:
	* src/vanity.c: Removed the builtin authentication manager, and
	use the one shipped in libgnomeui from the 2.4 version

2004-02-19  Bastien Nocera  <hadess@hadess.net>

	* configure.in: require GTK+ 2.3